# fps

./: build.py  flag.h  header.h  main.c
artifact/: Cargo.toml  build.rs
artifact/src/: fun.rs  main.rs  signal.rs
rust/: Cargo.toml  build.rs
rust/src/: main.rs  map.rs  wall.rs
rust/vizir/: Cargo.toml  build.rs
rust/vizir/src/: died.rs  flag.rs  lib.rs  sixel.rs
rust/vizir/textures/: died.ascii
