[package]
name = "artifact"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
stm32f1xx-hal = { version = "0.10.0", features = ["rt", "stm32f103"] }

[profile.release]
opt-level = "s"
lto = true
panic = "abort"

[build-dependencies]
morse-codec = "0.4.30"
